# quad-android-playground

./: .gitignore  Cargo.toml  README.md  build_android.sh  quad.toml
java/: MainActivity.java
java/playground/: FileOpen.java
src/: bluetooth.rs  fileopen.rs  main.rs
